Add update index file (styled)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--to let the webpage view varies depends on the device size -->
   <title>♋Mohaned's Personal Site</title>
-
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
       </td>
     </tr>
   </table>
-  <hr color="black">
+  <hr>
   <h3>Education</h3>
   <ul>
     <!-- unorder listing -->
@@ -42,7 +42,7 @@
       </ul>
     </li>
   </ul>
-  <hr color="black">
+  <hr>
 
   <h3>Experience</h3>
   <table cellspacing="10">
@@ -71,34 +71,31 @@
       </tr>
     </tbody>
   </table>
-  <hr color="black">
+  <hr>
 
 <h3>Skills</h3>
 
 <table cellspacing="10">
   <tr>
     <td>HTML</td>
-    <td>✫✫✫</td>
+    <td>⭐️⭐️⭐️</td>
     <td>CSS</td>
-    <td>✫✫✫</td>
+    <td>⭐️⭐️⭐️</td>
   </tr>
   <tr>
     <td>Javascript</td>
-    <td>✫✫</td>
+    <td>⭐️⭐️</td>
     <td>Github</td>
-    <td>✫✫✫</td>
+    <td>⭐️⭐️⭐️</td>
   </tr>
   <tr>
     <td>Git</td>
-    <td>✫✫✫</td>
+    <td>⭐️⭐️⭐️</td>
     <td>Linux</td>
-    <td>✫✫</td>
+    <td>⭐️⭐️</td>
   </tr>
 </table>
-
-
-
-<hr color="black">
+<hr>
   <a href="hobbies.html">Hobbies</a>
 </body>
 
